<resources>
    <string name="app_name">TestTaskRegisterForm</string>
    <string name="enter_password_hint">введите пароль</string>
    <string name="enter_email_hint">введите Email</string>
    <string name="email_field_name">Email</string>
    <string name="password_field_name">Пароль</string>


    <string-array name="popular_domains">

        <item>\@gmail.com</item>
        <item>\@yandex.ru</item>
        <item>\@mail.ru</item>
        <item>\@gmail.co.uk</item>
    </string-array>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="registration">Зарегестрироватся</string>
    <string name="cancel">Отмена</string>
    <string name="password_length_restrictions">Длина пароля должна быть в диапазоне от {0} до {1} символов</string>
    <string name="symbol_at_occurs_more_than_once">Символ @ должен втсречатся только 1 раз</string>
    <string name="symbol_at_is_present">Отсутвует символ @</string>
    <string name="incorrect_email_check_symbol">Некорректный email, проверьте символ:</string>
    <string name="unknown_domain_name">Неизвестное доменное имя</string>
    <string name="check_domain_name">Проверьте правильность Email</string>
    <string name="this_field_is_required">Это обязателное поле</string>
    <string name="registration_in_progress">Регистрация&#8230;</string>
    <string name="registration_error">Ошибка регистрации</string>
    <string name="user_with_this_login_exists">Пользователь с таким логином уже существует</string>
    <string name="unknown_error">Неивестная ошибка</string>
    <string name="validation_error">Ошибка при проверке данных на стороне сервера</string>
    <string name="sign_up_short">Sign Up</string>
    <string name="registration_short">Регистрация</string>
    <string name="registration_successful">Регистрация произведена успешно</string>
    <string name="your_login_is">Ваш логин</string>
    <string name="OK">OK</string>
    <string name="incorrect_email">Некорректный email</string>
    <string name="incorrect_email_in_end">Некорректный email, проеверте окончание</string>
    <string name="domain_name_not_exists">Доменное имя не существует</string>
    <string name="checking_domain_name">Проверка доменного имени&#8230;</string>
    <string name="error_checking_domain_name">Во время проверки доменного имени произошла ошибка</string>

    <string name="unknown_host_exception">Проверьте соединение с интернетом</string>


</resources>
