<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />
        <variable
            name="viewModel"
            type="com.belina.registration.ui.registration.RegistrationViewModel" />
    </data>

        <com.belina.registration.ui.base.activity.RelativeLayoutThatDetectsSoftKeyboard
            android:id="@+id/registerFormLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/bg">
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="24dp"
                    android:paddingRight="24dp"
                    android:paddingTop="60dp"
                    android:theme="@style/AppThemeNoActionBar">

                    <ImageView
                        android:id="@+id/logo"
                        android:layout_width="258dp"
                        android:layout_height="65dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="60dp"
                        android:layout_marginTop="60dp"
                        android:src="@drawable/logo" />


                    <TextView
                        style="@style/fieldNameStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email_field_name" />

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/emailInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/textInputLayoutStyle"

                        app:errorString="@{viewModel.emailField.errorMessage}"
                        tools:errorTextAppearance = "@{viewModel.emailField.errorType}"
                        android:nextFocusDown="@id/passwordTV"
                        app:hintEnabled = "false"
                        >

                        <AutoCompleteTextView
                            style="@style/registrationFields"
                            android:layout_width="match_parent"
                            android:id="@+id/emailTextView"
                            android:layout_height="wrap_content"
                            tools:binding="@{viewModel.emailField.string}"
                            android:inputType="textEmailAddress"
                            android:lines="1"
                            android:singleLine="true"
                            android:hint="@string/enter_email_hint"

                            android:lineSpacingExtra="16sp"
                            android:nextFocusForward="@id/passwordTV"/>


                    </android.support.design.widget.TextInputLayout>

                    <TextView
                        style="@style/fieldNameStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/password_field_name" />


                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        style="@style/textInputLayoutStyle"

                        app:hintEnabled="false"
                        app:passwordToggleEnabled="true"
                        app:errorString="@{viewModel.passwordField.errorMessage}">

                        <EditText
                            android:id="@+id/passwordTV"
                            style="@style/registrationFields"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/enter_password_hint"
                            android:inputType="textPassword"
                            app:binding="@{viewModel.passwordField.string}"
                            app:passwordToggleEnabled="true"
                            android:nextFocusForward="@id/registerButton"
                            android:imeActionLabel="@string/sign_up_short"

                            />


                    </android.support.design.widget.TextInputLayout>


                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/registerButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="24dp"
                        android:layout_marginTop="24dp"
                        android:background="@drawable/gradient_button"
                        android:fontFamily="@font/helvetica_neue_cyr_medium"
                        android:onClick="@{(view)->viewModel.onSendButtonClicked()}"

                        android:padding="15dp"
                        android:text="@string/registration_short"
                        android:textSize="16sp" />

                </LinearLayout>


            </ScrollView>


        </com.belina.registration.ui.base.activity.RelativeLayoutThatDetectsSoftKeyboard>

</layout>